change: comment on docker-compose.dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,9 +9,9 @@ services:
         NODE_ENV: development
 
     volumes:
-      # mean we will dump directories ./src into /app/src in container
+      # bind volume ./src into /app/src in container
       - ./src:/app/src
-      # we wont dump to /app/node_modules
+      # anonymous voulume
       - /app/node_modules
 
     environment:
