--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
         NODE_ENV: development
 
     volumes:
-      # bind volume ./src into /app/src in container
+      # bind volume ./src into /app/src in node-app container
       - ./src:/app/src
       # anonymous voulume
       - /app/node_modules
