--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": { 
-    "express": "^4.17.1"
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
