--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,8 +14,23 @@ services:
       # anonymous voulume
       - /app/node_modules
 
+    # POSTGRES env to connect to our postgres service
     environment:
       - NODE_ENV=development
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      
 
     # this command will override CMD in Dockerfile
     command: npm run dev
+
+
+  postgres:
+    # define environtment for pg images, self-explanatory
+    environment:
+      - POSTGRES_USERNAME=postgres
+      - POSTGRES_PASSWORD=postgres
+    # define named volumes to store data of postgres
+    # so its survive when container is stopped
+    volumes:
+      - postgres-db:/data/db
