--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+    # will start run this service after depends_on is run
+    # no matter depends_on services is failing or not
+    depends_on:
+      - postgres
 
 
   postgres:
